--- a/GestorFront-end/src/app/pages/login/login.component.html
+++ b/GestorFront-end/src/app/pages/login/login.component.html
@@ -129,7 +129,7 @@
     </div>
   
     <div class="inputGroup inputGroup1">
-      <label for="email1">Usuario</label>
+      <label for="email">Usuario</label>
       <input type="text" id="email" name="email" [(ngModel)]="usuario" class="email" maxlength="256" required/>
       <p class="helper helper1">usuario</p>
       <span class="indicator"></span>
