--- a/GestorFront-end/src/app/pages/reporte/reporte.component.css
+++ b/GestorFront-end/src/app/pages/reporte/reporte.component.css
@@ -59,10 +59,14 @@
   }
   
   table {
-    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    width: 80%;
+    text-align: center;
   }
   
   .mat-form-field {
     font-size: 14px;
     width: 100%;
   }
+  tr:hover {background-color: coral;}
