--- a/GestorFront-end/src/app/pages/grafico/llamadasonline/llamadasonline.component.html
+++ b/GestorFront-end/src/app/pages/grafico/llamadasonline/llamadasonline.component.html
@@ -1,1 +1,126 @@
-<p>llamadasonline works!</p>
+
+
+<mat-toolbar>
+    <mat-toolbar-row>
+        <span class="span">LLAMADAS POR HORA {{empresaparametro}}</span>
+    </mat-toolbar-row>
+</mat-toolbar>
+
+
+<div style="width: 50%; float:left" [hidden]="!chart" class="chart-container"  class="center">
+  <div class="example-containe mat-elevation-z8">
+    <form method="POST">
+      
+  <div>
+     <mat-form-field class="example-form-field" appearance="fill">
+       <mat-label>Selecccione las fechas</mat-label>
+       <mat-date-range-input
+         [formGroup]="campaignOne"
+         [rangePicker]="campaignOnePicker"
+         [comparisonStart]="campaignTwo.value.start"
+         [comparisonEnd]="campaignTwo.value.end">
+         <input matStartDate placeholder="Start date" formControlName="start" [(ngModel)]="fechaInicio">
+         <input matEndDate placeholder="End date" formControlName="end" [(ngModel)]="fechaFin">
+       </mat-date-range-input>
+       <mat-datepicker-toggle matSuffix [for]="campaignOnePicker"></mat-datepicker-toggle>
+       <mat-date-range-picker #campaignOnePicker></mat-date-range-picker>
+     </mat-form-field>
+    </div>
+ 
+<section>
+    <div class="example-button-row">
+    <button mat-raised-button color="primary"(click)="llamadasporHora()">Aceptar
+      <mat-icon>trending_up</mat-icon></button>
+    <button mat-raised-button color="accent" (click)="cambiar()">Graficas
+      <mat-icon>trending_up</mat-icon>
+    </button>
+    <button mat-raised-button class="save-button-1" (click)="llamadasporHora()">Aceptar
+      <mat-icon>trending_up</mat-icon></button>
+    <button mat-raised-button class="save-button-2" (click)="cambiar()">Graficas
+      <mat-icon>trending_up</mat-icon>
+    </button>
+  </div>
+</section>
+
+   
+   </form>
+ </div>
+
+ <canvas id="canvas">{{chart}}</canvas>
+ 
+  
+</div> 
+<div style="width: 50%; float:right"> 
+<div>
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+
+        <!--- Note that these columns can be defined in any order.
+              The actual rendered columns are set as a property on the row definition" -->
+      
+        <!-- Position Column -->
+        <ng-container matColumnDef="hora_llamada">
+          <th mat-header-cell *matHeaderCellDef style="text-align: center" > HORA </th>
+          <td mat-cell *matCellDef="let element"> {{element.hora_llamada}} </td>
+        </ng-container>
+      
+        <!-- Name Column -->
+        <ng-container matColumnDef="answered">
+          <th mat-header-cell *matHeaderCellDef style="text-align: center" > CONTESTADAS </th>
+          <td mat-cell *matCellDef="let element"> {{element.answered}} </td>
+        </ng-container>
+      
+        <!-- Weight Column -->
+        <ng-container matColumnDef="no_answer">
+          <th mat-header-cell *matHeaderCellDef style="text-align: center" > SIN CONTESTAR </th>
+          <td mat-cell *matCellDef="let element"> {{element.no_answer}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="totales">
+            <th mat-header-cell *matHeaderCellDef style="text-align: center" > TOTAL </th>
+            <td mat-cell *matCellDef="let element"> {{element.totales}} </td>
+          </ng-container>
+      
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>  
+    </div>
+<div>
+  <table mat-table [dataSource]="dataSources" class="mat-elevation-z8">
+
+    <!--- Note that these columns can be defined in any order.
+          The actual rendered columns are set as a property on the row definition" -->
+
+            <!-- Position Column -->
+            <ng-container matColumnDef="total">
+              <th mat-header-cell *matHeaderCellDef style="text-align: center" > HORA </th>
+              <td mat-cell *matCellDef="let element"> {{element.total}} </td>
+            </ng-container>
+  
+    <!-- Position Column -->
+    <ng-container matColumnDef="contestadas">
+      <th mat-header-cell *matHeaderCellDef style="text-align: center" > CONTESTADAS </th>
+      <td mat-cell *matCellDef="let element"> {{element.contestadas}} </td>
+    </ng-container>
+  
+    <!-- Name Column -->
+    <ng-container matColumnDef="nocontestadas">
+      <th mat-header-cell *matHeaderCellDef style="text-align: center" > SIN CONTESTAR </th>
+      <td mat-cell *matCellDef="let element"> {{element.nocontestadas}} </td>
+    </ng-container>
+  
+    <!-- Weight Column -->
+    <ng-container matColumnDef="totalG">
+      <th mat-header-cell *matHeaderCellDef style="text-align: center" > TOTAL </th>
+      <td mat-cell *matCellDef="let element"> {{element.totalG}} </td>
+    </ng-container>
+  
+    <tr mat-header-row *matHeaderRowDef="displayedColumnss"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumnss;"></tr>
+  </table>
+  
+  
+</div>
+</div>
+
+
+    
