--- a/GestorFront-end/src/app/pages/monitoreo/monitoreo/monitoreo.component.css
+++ b/GestorFront-end/src/app/pages/monitoreo/monitoreo/monitoreo.component.css
@@ -1,5 +1,11 @@
 table {
-    width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  width: 90%;
+  text-align: center;
+}
+  .span {
+    margin: auto;
   }
   
   .make-gold {
