--- a/GestorFront-end/src/app/pages/monitoreo/monitoreo/monitoreo.component.html
+++ b/GestorFront-end/src/app/pages/monitoreo/monitoreo/monitoreo.component.html
@@ -1,4 +1,11 @@
+
 <app-loading *ngIf="loading"></app-loading>
+
+<mat-toolbar>
+  <mat-toolbar-row>
+      <span class="span">MONITOREO {{empresaparametro}}</span>
+  </mat-toolbar-row>
+</mat-toolbar>
 
 <mat-form-field appearance="standard">
   <mat-label >Buscar</mat-label>
@@ -12,35 +19,40 @@
           The actual rendered columns are set as a property on the row definition" -->
   
 
-      <ng-container matColumnDef="serial">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> # </th>
+      <ng-container matColumnDef="serial" >
+            <th mat-header-cell *matHeaderCellDef mat-sort-header style="text-align: center"> # </th>
             <td mat-cell *matCellDef="let i = index"  scope="row">{{i+1}}</td>
       </ng-container>
 
     <!-- Position Column -->
-    <ng-container matColumnDef="extension">
-      <th mat-header-cell *matHeaderCellDef> EXTENSION </th>
+    <ng-container matColumnDef="extension" class="cabecera">
+      <th mat-header-cell *matHeaderCellDef style="text-align: center"> EXTENSION </th>
       <td mat-cell *matCellDef="let element"  [ngClass]="element.descripcion"> {{element.id_extension }} </td>
     </ng-container>
 
   
     <ng-container matColumnDef="login">
-      <th mat-header-cell *matHeaderCellDef> USUARIO </th>
+      <th mat-header-cell *matHeaderCellDef style="text-align: center" > USUARIO </th>
       <td mat-cell *matCellDef="let element" [ngClass]="element.descripcion"> {{element.login_agente }} </td>
     </ng-container>
 
     <ng-container matColumnDef="fecha">
-      <th mat-header-cell *matHeaderCellDef> FECHA </th>
+      <th mat-header-cell *matHeaderCellDef style="text-align: center" > FECHA </th>
       <td mat-cell *matCellDef="let element" [ngClass]="element.descripcion"> {{element.fechahora_inicio_estado |   date:'medium' }} </td>
     </ng-container>
 
     <ng-container matColumnDef="descripcion">
-      <th mat-header-cell *matHeaderCellDef> DESCRIPCION </th>
+      <th mat-header-cell *matHeaderCellDef style="text-align: center" > ESTADO </th>
       <td mat-cell *matCellDef="let element" [ngClass]="element.descripcion"> {{element.descripcion  }} </td>
     </ng-container>
 
+    <ng-container matColumnDef="numero_origen">
+      <th mat-header-cell *matHeaderCellDef style="text-align: center" > NÚMERO </th>
+      <td mat-cell *matCellDef="let element" [ngClass]="element.descripcion"> {{element.numero_origen  }} </td>
+    </ng-container>
+
     <ng-container matColumnDef="total">
-      <th mat-header-cell *matHeaderCellDef> TOTAL </th>
+      <th mat-header-cell *matHeaderCellDef style="text-align: center" > TOTAL </th>
       <td mat-cell *matCellDef="let element" [ngClass]="element.descripcion"> {{element.total }}</td>
     </ng-container>
 
