--- a/GestorFront-end/src/app/pages/reporte/reporte.component.html
+++ b/GestorFront-end/src/app/pages/reporte/reporte.component.html
@@ -6,7 +6,7 @@
 
 <div [hidden]="route.children.length !== 0">
   
-  <mat-toolbar > <p class="center"> Reportes Gestor Clientes</p> </mat-toolbar>
+  <mat-toolbar > <p class="center"> REPORTES GESTOR CLIENTES </p> </mat-toolbar>
   
 
 <mat-form-field appearance="standard">
@@ -18,17 +18,17 @@
 <table mat-table [dataSource]="dataSource"  matSort class="mat-elevation-z8">
 
   <ng-container matColumnDef="serial">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header> # </th>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header class="center"> # </th>
     <td mat-cell *matCellDef="let i = index"  scope="row">{{i+1}}</td>
   </ng-container>
 
   <ng-container matColumnDef="nombre">
-    <th mat-header-cell *matHeaderCellDef> Nombre </th>
+    <th mat-header-cell *matHeaderCellDef class="center"> NOMBRE </th>
     <td mat-cell *matCellDef="let element"  class="center"> {{element.nombre_reporte |  uppercase }} </td>
   </ng-container>
 
   <ng-container matColumnDef="acciones">
-    <mat-header-cell *matHeaderCellDef>Acciones</mat-header-cell>
+    <mat-header-cell *matHeaderCellDef>ACCIONES</mat-header-cell>
     <mat-cell *matCellDef="let element">
         <button mat-button color="primary" [routerLink]="[element.nombre_descarga]">
             <mat-icon>ballot</mat-icon>
