--- a/GestorFront-end/src/app/pages/empresa/empresas/empresas.component.html
+++ b/GestorFront-end/src/app/pages/empresa/empresas/empresas.component.html
@@ -18,7 +18,8 @@
 </div >
 
 <div class="center">
-  <button mat-raised-button color="primary" (click)="aceptar()" >Aceptar</button >
+  <button mat-raised-button color="primary" (click)="aceptar()" routerLink="/reporte" >
+    Aceptar</button >
 </div>
 
 
