--- a/GestorFront-end/src/app/pages/reporte/llamadas-fuera-horario-eventual/llamadas-fuera-horario-eventual.component.html
+++ b/GestorFront-end/src/app/pages/reporte/llamadas-fuera-horario-eventual/llamadas-fuera-horario-eventual.component.html
@@ -37,7 +37,7 @@
   </form>
 </div>
 
-<mat-form-field appearance="standard">
+<mat-form-field appearance="fill">
   <mat-label >Buscar</mat-label>
   <input matInput (keyup)="filtro($event)" placeholder="Reportes" #input>
 </mat-form-field>
