--- a/GestorFront-end/src/app/pages/reporte/reporte.component.html
+++ b/GestorFront-end/src/app/pages/reporte/reporte.component.html
@@ -9,7 +9,7 @@
   <mat-toolbar > <p class="center"> REPORTES GESTOR CLIENTES {{empresaparametro}}</p> </mat-toolbar>
   
 
-<mat-form-field appearance="standard">
+<mat-form-field appearance="fill">
   <mat-label >Buscar</mat-label>
   <input matInput (keyup)="filtro($event)" placeholder="Reportes" #input>
 </mat-form-field>
@@ -19,25 +19,24 @@
 
   <ng-container matColumnDef="serial">
     <th mat-header-cell *matHeaderCellDef mat-sort-header class="centre"> ## </th>
-    <td mat-cell *matCellDef="let i = index"  scope="row">{{i+1}}</td>
+    <td mat-cell *matCellDef="let i = index"  scope="row" class="center" >{{i+1}}</td>
   </ng-container>
 
-  <ng-container matColumnDef="nombre">
-    <th mat-header-cell *matHeaderCellDef class="centre"> NOMBRE </th>
-    <td mat-cell *matCellDef="let element"  class="center"> {{element.nombre_reporte |  uppercase }} </td>
+  <ng-container matColumnDef="nombre_reporte">
+    <th mat-header-cell *matHeaderCellDef class="centre"> REPORTE </th>
+    <td mat-cell *matCellDef="let element" class="center"> {{element.nombre_reporte |  uppercase }}</td>
   </ng-container>
 
   <ng-container matColumnDef="acciones">
-    <mat-header-cell *matHeaderCellDef class="centre">ACCIONES</mat-header-cell>
-    <mat-cell *matCellDef="let element">
-        <button mat-button color="primary" [routerLink]="[element.nombre_descarga]">
-            <mat-icon>ballot</mat-icon>
-        </button>
-    </mat-cell>
+    <th mat-header-cell *matHeaderCellDef class="centre" > ACCIONES </th>
+    <td mat-cell *matCellDef="let element" class="center"> 
+      <button mat-button color="primary" [routerLink]="[element.nombre_descarga]">
+        <mat-icon>ballot</mat-icon>
+      </button>  
+    </td>
 </ng-container>
 
-
-
+  
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
