--- a/GestorFront-end/src/app/pages/reporte/seguimiento-agente/seguimiento-agente.component.html
+++ b/GestorFront-end/src/app/pages/reporte/seguimiento-agente/seguimiento-agente.component.html
@@ -26,7 +26,7 @@
   </form>
 </div>
 
-<mat-form-field appearance="standard">
+<mat-form-field appearance="fill">
   <mat-label >Buscar</mat-label>
   <input matInput (keyup)="filtro($event)" placeholder="Reportes" #input>
 </mat-form-field>
