--- a/GestorFront-end/src/app/pages/login/login.component.css
+++ b/GestorFront-end/src/app/pages/login/login.component.css
@@ -1,157 +1,564 @@
 /* You can add global styles to this file, and also import other style files */
 /* colors */
-html {
+/* {
+  width: 100%;
+  height: 100%;
+}
+
+body {
+  background-color: #eff3f4;
+  position: relative;
+  width: 100%;
+  height: 100%;        
+  font-weight: 400;
+  -webkit-font-smoothing: antialiased;
+}
+
+form {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  display: block;
+  width: 100%;
+  max-width: 400px;
+  background-color: #FFF;
+  margin: 0;
+  padding: 2.25em;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border: solid 1px #DDD;
+  border-radius: .5em;
+  font-family: 'Source Sans Pro', sans-serif;
+}
+form .svgContainer {
+  position: relative;
+  width: 200px;
+  height: 200px;
+  margin: 0 auto 1em;
+  border-radius: 50%;
+  background: none;
+  border: solid 2.5px #3A5E77;
+  overflow: hidden;
+  pointer-events: none;
+}
+form .svgContainer div {
+  position: relative;
+  width: 100%;
+  height: 0;
+  overflow: hidden;
+  padding-bottom: 100%;
+}
+form .svgContainer .mySVG {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+}
+form .inputGroup {
+  margin: 0 0 2em;
+  padding: 0;
+  position: relative;
+}
+form .inputGroup:last-of-type {
+  margin-bottom: 0;
+}
+form label {
+  margin: 0 0 12px;
+  display: block;
+  font-size: 1.25em;
+  color: #217093;
+  font-weight: 700;
+  font-family: inherit;
+}
+form input[type='email'], form input[type="text"], form input[type='password'] {
+  display: block;
+  margin: 0;
+  padding: 0 1em 0;
+  background-color: #f3fafd;
+  border: solid 2px #217093;
+  border-radius: 4px;
+  -webkit-appearance: none;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  width: 100%;
+  height: 65px;
+  font-size: 1.55em;
+  color: #353538;
+  font-weight: 600;
+  font-family: inherit;
+  -webkit-transition: border-color .25s ease-out, -webkit-box-shadow .2s linear;
+  transition: border-color .25s ease-out, -webkit-box-shadow .2s linear;
+  transition: box-shadow .2s linear, border-color .25s ease-out;
+  transition: box-shadow .2s linear, border-color .25s ease-out, -webkit-box-shadow .2s linear;
+}
+form input[type='email']:focus, form input[type="text"]:focus, form input[type='password']:focus {
+  outline: none;
+  -webkit-box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
+          box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
+  border: solid 2px #4eb8dd;
+}
+form input[type='email'], form input[type="text"] {
+  padding: 14px 1em 0px;
+}
+form button {
+  display: block;
+  margin: 0;
+  padding: .65em 1em 1em;
+  background-color: #4eb8dd;
+  border: none;
+  border-radius: 4px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  width: 100%;
+  height: 65px;
+  font-size: 1.55em;
+  color: #FFF;
+  font-weight: 600;
+  font-family: inherit;
+  -webkit-transition: background-color .2s ease-out;
+  transition: background-color .2s ease-out;
+}
+form button:hover, form button:active {
+  background-color: #217093;
+}
+form .inputGroup1 .helper {
+  position: absolute;
+  z-index: 1;
+  font-family: inherit;
+}
+form .inputGroup1 .helper1 {
+  top: 0;
+  left: 0;
+  -webkit-transform: translate(1.4em, 2.6em) scale(1);
+          transform: translate(1.4em, 2.6em) scale(1);
+  -webkit-transform-origin: 0 0;
+          transform-origin: 0 0;
+  color: #217093;
+  font-size: 1.25em;
+  font-weight: 400;
+  opacity: .65;
+  pointer-events: none;
+  -webkit-transition: opacity .2s linear, -webkit-transform .2s ease-out;
+  transition: opacity .2s linear, -webkit-transform .2s ease-out;
+  transition: transform .2s ease-out, opacity .2s linear;
+  transition: transform .2s ease-out, opacity .2s linear, -webkit-transform .2s ease-out;
+}
+form .inputGroup1.focusWithText .helper {
+  /*input[type='email']:focus + .helper {
+  -webkit-transform: translate(1.4em, 2em) scale(0.65);
+          transform: translate(1.4em, 2em) scale(0.65);
+  opacity: 1;
+}
+*/
+@import url('https://fonts.googleapis.com/css?family=Montserrat|Montserrat+Alternates|Poppins&display=swap');
+
+*{
+    margin: 0; /*entre las cajas*/
+    padding: 0;/*del contenido de la caja a los bordes*/
+    box-sizing: border-box;
+    font-family:'Bowlby One SC', cursive ; /*letra de texto*/
+}
+
+body{
+  height: 100vh;
+  /*background-image: url('/assets/fondos/fondo1.jpg');*/
+  background-repeat: no-repeat;
+  background-size: cover;
+  
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+
+
+/* ... (tu código existente) ... */
+
+/* Estilos para .login en pantallas grandes */
+.login {
+  height: 750px;
+  left: 60%;
+  position: absolute;
+  z-index: 9999;
+  color: #050505;
+}
+
+/* Hacer que el contenido esté centrado en pantallas pequeñas */
+@media screen and (max-width: 768px) {
+  .login {
     width: 100%;
-    height: 100%;
+    left: 0;
+    top: 50%;
+    transform: translateY(-50%);
+    position: absolute;
+    z-index: 9999;
+  }
+}
+
+/* Estilos para .imge */
+.imge {
+  height: 60vh;
+  position: relative;
+}
+
+/* Ajustar .imge en pantallas medianas */
+@media screen and (max-width: 1100px) {
+  .imge {
+    height: 40vh;
+    position: relative;
+  }
+  footer {
+    margin-top: 180vh;
+  }
+}
+
+/* Ajustar .imge en pantallas pequeñas */
+@media screen and (max-width: 820px) {
+  .imge {
+    height: 23vh;
+    position: absolute;
+    margin: 0% 60% 90% 50px;
+  }
+  footer {
+    margin-top: 160vh;
+  }
+}
+
+/* Ocultar .imge cuando la pantalla tenga un ancho menor o igual a 800px */
+@media screen and (max-width: 800px) {
+  .imge {
+    display: none;
   }
   
-  body {
-    background-color: #eff3f4;
-    position: relative;
+  footer {
+    margin-top: 200vh;
+    
+  }
+  .login {
+    /*top: 10%;*/
+  }
+
+  
+}
+
+
+/* ... (tu código existente) ... */
+
+
+.empresa{
+    margin: 45% 50% 50% 10%;
+    background-color: #0000;
+    height: fit-content;
+}
+
+
+.formulario{
+    width: 400px; /*ancho del contenedor formulario*/
+    position: absolute; /* permite posicionar elementos de manera absoluta, esto es de manera definida por valores de los atributos top, left, bottom y right, que indican la distancia con respecto a un punto.*/
+    background-color: #efeeee;/*color de fondo del formulario*/
+    /*border: 4px solid #8f4790; Borde del formualrio y color */
+    border-radius: 10px; /*darle curvadura al borde*/
+    padding: 30px 60px; /*del contenido de la caja a los bordes*/
+    top: 100px; /*subir el formulario*/
+    left: 10vh; /*lo mueve a la dechar npi*/
+    /*transform: translate(-50%); /*lo vuelve a dehjar donde estaba en el centro*/
+    text-align: center; /*alinear al centro*/
+}
+
+
+
+
+.formulario input,label,button{
+    display: block; /*que que todos se pongan en bloque a lo ancho*/
+    width: 100%; /*que cubran el 100 del ancho del contenedor*/
+    margin: 5px;/*entre las cajas*/
+}
+.formulario input{
+    height: 40px; /*altura de los input*/
+    border: 2px solid #080808; /*borde para los input*/
+    border-radius: 10px;/*curvatura para los input*/
+    padding: 0 8px;  /*del contenido de la caja a los bordes 0 en el eje y y 8 en el eje x*/
+}
+
+.formulario button{
+    margin-top: 20px; /*separalo de la otra caja 20 px de arriba*/
+    cursor: pointer;/*cambia el cursor*/
+    border: none; /*sin borde*/
+    height: 40px;/*altura del boton*/
+    background-color: #050505;/*color de fondo del boton*/
+    box-shadow: 1px 1px 2px #000;/*añade efectos de sombra alrededor del marco de un elemento.*/
+    color: #ffff;/*Cambiar color de letra*/
+}
+
+.formulario button:hover{
+    background-color: #11111165;/*cuando se pone el mouse encima cambia el tono de morado*/
+}
+
+footer{
     width: 100%;
-    height: 100%;        
-    font-weight: 400;
-    -webkit-font-smoothing: antialiased;
+    background: #000000;
+    color: white;   
+    position: absolute;
+    /*height: 400px; */
+    margin-top: 120vh;
+    padding-top: 5px;
+    
+  }
+
+
+  @media screen and (max-width: 1000px) {
+    .footer {
+      width: 100%;
+      background: #000000;
+      color: white;   
+      position: absolute;
+      /*height: 400px; */
+      margin-top: 180vh;
+      padding-top: 5px;
+    }
+  }
+
+  
+
+
+
+.footer{
+  max-width: 1200px;
+  margin: auto;
+  display: flex;
+  justify-content: space-between;  
+  padding: 20px;
+} 
+  
+  .container-footer-all{
+    width: 100%;
+    max-width: 1200px;
+    margin: auto;
+    padding: 40px;
   }
   
-  form {
-    position: absolute;
-    top: 53%;
-    left: 50%;
-    -webkit-transform: translate(-50%, -50%);
-            transform: translate(-50%, -50%);
-    display: block;
-    width: 90%;
-    max-width: 300px;
-    background-color: transparent;
-    margin: 0;
-    padding: 2.25em;
-    -webkit-box-sizing: border-box;
-            box-sizing: border-box;
-    border: solid 1px #DDD;
-    border-radius: .5em;
-    font-family: 'Source Sans Pro', sans-serif;
+  .container-body{
+    display: flex;
+    justify-content: space-between;
   }
-  form .svgContainer {
-    position: relative;
-    width: 150px;
-    height: 150px;
-    margin: 0 auto 1em;
-    border-radius: 50%;
-    background: none;
-    border: solid 2.5px #3A5E77;
-    overflow: hidden;
-    pointer-events: none;
+  
+  .colum1{
+    max-width: 400px;
   }
-  form .svgContainer div {
-    position: relative;
-    width: 100%;
-    height: 0;
-    overflow: hidden;
-    padding-bottom: 100%;
+  
+  .colum1 h1{
+    font-size: 22px;
   }
-  form .svgContainer .mySVG {
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    pointer-events: none;
+  
+  .colum1 p{
+    font-size: 14px;
+    color: #C7C7C7;
+    margin-top: 20px;
   }
-  form .inputGroup {
-    margin: 0 0 2em;
-    padding: 0;
-    position: relative;
+  
+  .colum2{
+    max-width: 400px;
+    
   }
-  form .inputGroup:last-of-type {
-    margin-bottom: 0;
+  
+  .colum2 h1{
+    font-size: 22px;
   }
-  form label {
-    margin: 0 0 12px;
-    display: block;
-    font-size: 1.25em;
-    color: #217093;
-    font-weight: 700;
-    font-family: inherit;
+  
+  .row{
+    margin-top: 20px;
+    display: flex;
   }
-  form input[type='email'], form input[type="text"], form input[type='password'] {
-    display: block;
-    margin: 0;
-    padding: 0 1em 0;
-    background-color: #f3fafd;
-    border: solid 2px #217093;
-    border-radius: 4px;
-    -webkit-appearance: none;
-    -webkit-box-sizing: border-box;
-            box-sizing: border-box;
-    width: 100%;
-    height: 45px;
-    font-size: 1.55em;
-    color: #353538;
-    font-weight: 600;
-    font-family: inherit;
-    -webkit-transition: border-color .25s ease-out, -webkit-box-shadow .2s linear;
-    transition: border-color .25s ease-out, -webkit-box-shadow .2s linear;
-    transition: box-shadow .2s linear, border-color .25s ease-out;
-    transition: box-shadow .2s linear, border-color .25s ease-out, -webkit-box-shadow .2s linear;
+  
+  .row img{
+    width: 36px;
+    height: 36px;
   }
-  form input[type='email']:focus, form input[type="text"]:focus, form input[type='password']:focus {
-    outline: none;
-    -webkit-box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
-            box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
-    border: solid 2px #4eb8dd;
+  
+  .row label{
+    margin-top: 10px;
+    margin-left: 20px;
+    color: #C7C7C7;
   }
-  form input[type='email'], form input[type="text"] {
-    padding: 14px 1em 0px;
+  
+  .colum3{
+    max-width: 400px;
   }
-  form button {
-    display: block;
-    margin: 0;
-    padding: .65em 1em 1em;
-    background-color: #4eb8dd;
-    border: none;
-    border-radius: 8px;
-    -webkit-box-sizing: border-box;
-            box-sizing: border-box;
-    -webkit-box-shadow: none;
-            box-shadow: none;
-    width: 100%;
-    height: 45px;
-    font-size: 1.55em;
-    color: #FFF;
-    font-weight: 600;
-    font-family: inherit;
-    -webkit-transition: background-color .2s ease-out;
-    transition: background-color .2s ease-out;
+  
+  .colum3 h1{
+    font-size: 22px;
   }
-  form button:hover, form button:active {
-    background-color: #217093;
+  
+  .row2{
+    margin-top: 20px;
+    display: flex;
   }
-  form .inputGroup1 .helper {
-    position: absolute;
-    z-index: 1;
-    font-family: inherit;
+  
+  .row2 img{
+    width: 36px;
+    height: 36px;
   }
-  form .inputGroup1 .helper1 {
-    top: 0;
-    left: 0;
-    -webkit-transform: translate(1.4em, 2.6em) scale(1);
-            transform: translate(1.4em, 2.6em) scale(1);
-    -webkit-transform-origin: 0 0;
-            transform-origin: 0 0;
-    color: #217093;
-    font-size: 1.25em;
-    font-weight: 400;
-    opacity: .65;
-    pointer-events: none;
-    -webkit-transition: opacity .2s linear, -webkit-transform .2s ease-out;
-    transition: opacity .2s linear, -webkit-transform .2s ease-out;
-    transition: transform .2s ease-out, opacity .2s linear;
-    transition: transform .2s ease-out, opacity .2s linear, -webkit-transform .2s ease-out;
+  
+  .row2 label{
+    margin-top: 10px;
+    margin-left: 20px;
+    max-width: 140px;
   }
-  form .inputGroup1.focusWithText .helper {
-    /*input[type='email']:focus + .helper {*/
-    -webkit-transform: translate(1.4em, 2em) scale(0.65);
-            transform: translate(1.4em, 2em) scale(0.65);
+  
+  .container-footer{
+    width: 100%;  
+    background: #101010;
+  }
+  
+  
+  
+  
+  
+  .copyright{
+    color: #C7C7C7;
+  }
+  
+  .copyright a{
+    text-decoration: none;
+    color: white;
+    font-weight: bold;
+  }
+  
+  .information a{
+    text-decoration: none;
+    color: #C7C7C7;
+  }
+  
+  
+  @media screen and (max-width: 1100px){
+    
+    .container-body{
+        flex-wrap: wrap;
+    }
+    
+    .colum1{
+        max-width: 100%;
+    }
+    
+    .colum2,
+    .colum3{
+        margin-top: 40px;
+    }
+  }
+
+  .error-message {
+    color: red;
+    font-size: 16pt;
+ }
+
+
+ @media screen and (max-width: 1100px){
+    
+  .container-body{
+      flex-wrap: wrap;
+  }
+  
+  .colum1{
+      max-width: 100%;
+  }
+  
+  .colum2,
+  .colum3{
+      margin-top: 40px;
+  }
+}
+
+.mensajecaptcha {
+  color: red;
+  animation: parpadeo 1s infinite;
+}
+
+@keyframes parpadeo {
+  0% {
     opacity: 1;
   }
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+.error-message {
+  color: rgb(0, 51, 255);
+  animation: parpadeo 1s infinite;
+}
+@keyframes parpadeo {
+  0% {
+      opacity: 1;
+ }
+  50% {
+      opacity: 0;
+ }
+  100% {
+      opacity: 1;
+ }
+}
+
+#recuperarclave {
+color: blue; /* Color normal del texto */
+text-decoration: none; /* Quita la subrayado del enlace */
+transition: font-size 0.2s, color 0.2s; /* Agrega transición suave para los estilos */
+
+/* Animación al pasar el mouse */
+/*animation: blink 1s infinite alternate; /* Parpadeo */
+}
+
+#recuperarclave:hover {
+color: rgb(13, 0, 255); /* Cambia el color al pasar el mouse */
+font-size: 1.1em; /* Aumenta el tamaño de fuente al pasar el mouse */
+animation: blink 1s infinite alternate;
+}
+
+#recuperarclave:active {
+color: rgb(4, 3, 73); /* Cambia el color al hacer clic */
+}
+
+@keyframes blink {
+from {
+ opacity: 1;
+}
+to {
+ opacity: 0.5;
+}
+}
+
+form .svgContainer {
+  position: relative;
+  width: 150px;
+  height: 150px;
+  margin: 0 auto 1em;
+  border-radius: 50%;
+  background: none;
+  border: solid 2.5px #3A5E77;
+  overflow: hidden;
+  pointer-events: none;
+}
+form .svgContainer div {
+  position: relative;
+  width: 100%;
+  height: 0;
+  overflow: hidden;
+  padding-bottom: 100%;
+}
+form .svgContainer .mySVG {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+}
