--- a/GestorFront-end/src/app/app.component.html
+++ b/GestorFront-end/src/app/app.component.html
@@ -66,6 +66,12 @@
               <span>AdminUsuarios</span>
           </button>
 
+
+          <mat-divider></mat-divider>
+          <button mat-menu-item (click)="sidenav.toggle()" routerLink="/grabaciones" style="cursor: pointer">
+              <mat-icon>accessibility</mat-icon>
+              <span>Grabaciones</span>
+          </button>
       </mat-sidenav>
       
       <mat-sidenav-content>
