--- a/GestorFront-end/src/app/pages/empresa/empresas/empresas.component.html
+++ b/GestorFront-end/src/app/pages/empresa/empresas/empresas.component.html
@@ -1,25 +1,27 @@
 <mat-toolbar>
   <mat-toolbar-row>
-      <span class="span">Búsqueda de Empresas</span>
+    <span class="span">Búsqueda de Empresas</span>
   </mat-toolbar-row>
 </mat-toolbar>
 
 <div  class="center">
-<mat-form-field appearance="fill">
-  <mat-label>Seleccciona la Empresa</mat-label>
-  <mat-select placeholder="SELECCCION" [(value)]="pseudonimo">
-    <mat-option *ngFor="let p of ( empresas$ | async )" [value]="p.pseudonimo">
-      {{p.pseudonimo}}
-    </mat-option>
-  </mat-select>
-</mat-form-field>
+  <mat-form-field appearance="fill">
+    <mat-label>Seleccciona la Empresa</mat-label>
+    <mat-select placeholder="SELECCCION" [(value)]="pseudonimo">
+      @for (p of ( empresas$ | async ); track p) {
+        <mat-option [value]="p.pseudonimo">
+          {{p.pseudonimo}}
+        </mat-option>
+      }
+    </mat-select>
+  </mat-form-field>
 
 
 </div >
 
 <div class="center">
   <button mat-raised-button color="primary" (click)="aceptar()" routerLink="/reporte" >
-    Aceptar</button >
+  Aceptar</button >
 </div>
 
 
