--- a/GestorFront-end/src/app/pages/monitoreo/monitoreo/monitoreo.component.html
+++ b/GestorFront-end/src/app/pages/monitoreo/monitoreo/monitoreo.component.html
@@ -1,9 +1,11 @@
 
-<app-loading *ngIf="loading"></app-loading>
+@if (loading) {
+  <app-loading></app-loading>
+}
 
 <mat-toolbar>
   <mat-toolbar-row>
-      <span class="span">MONITOREO {{empresaparametro}}</span>
+    <span class="span">MONITOREO {{empresaparametro}}</span>
   </mat-toolbar-row>
 </mat-toolbar>
 
@@ -16,13 +18,13 @@
 <div class="animated fadeIn m-5">
   <table mat-table [dataSource]="dataSource"  matSort  class="mat-elevation-z8">
     <!--- Note that these columns can be defined in any order.
-          The actual rendered columns are set as a property on the row definition" -->
-  
+    The actual rendered columns are set as a property on the row definition" -->
 
-      <ng-container matColumnDef="serial" >
-            <th mat-header-cell *matHeaderCellDef mat-sort-header style="text-align: center"> <h4>#</h4> </th>
-            <td mat-cell *matCellDef="let i = index"  scope="row">{{i+1}}</td>
-      </ng-container>
+
+    <ng-container matColumnDef="serial" >
+      <th mat-header-cell *matHeaderCellDef mat-sort-header style="text-align: center"> <h4>#</h4> </th>
+      <td mat-cell *matCellDef="let i = index"  scope="row">{{i+1}}</td>
+    </ng-container>
 
     <!-- Position Column -->
     <ng-container matColumnDef="extension" class="cabecera">
@@ -30,7 +32,7 @@
       <td mat-cell *matCellDef="let element"  [ngClass]="element.descripcion"> {{element.id_extension }} </td>
     </ng-container>
 
-  
+
     <ng-container matColumnDef="login">
       <th mat-header-cell *matHeaderCellDef style="text-align: center" > USUARIO </th>
       <td mat-cell *matCellDef="let element" [ngClass]="element.descripcion"> {{element.login_agente }} </td>
@@ -56,7 +58,7 @@
       <td mat-cell *matCellDef="let element" [ngClass]="element.descripcion"> {{element.total }}</td>
     </ng-container>
 
-  
+
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
